refact: adicionado firebase hosting e deletado arquivos de teste

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -3,9 +3,11 @@
     <div class="col-lg-3">
       <h1 class="title">Search <span class="subtitle">d_evs</span></h1>
     </div>
-    <form (ngSubmit)="handleSubmit(input)">
+    <form
+      class="pl-32 col-lg-6 align-items-left"
+      (ngSubmit)="handleSubmit(input)"
+    >
       <app-input
-        class="pl-32 col-lg-6 align-items-left"
         (onSubmit)="handleSearch($event)"
         (onChange)="handleChange($event)"
       ></app-input>
