feat: implementada pagina de not found

--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -36,7 +36,7 @@
   .search-button
     text-align: center !important
     padding: 10px 24px
-    background: #8C19D2
+    background-color: #8C19D2
     border-radius: 6px
     font-size: 18px
     font-weight: 600
