--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,11 @@
-<p>not-found works!</p>
+<div class="not-found">
+  <div class="container">
+    <h1>404</h1>
+    <h4>Página não encontrada</h4>
+    <p>
+      Parece que você tentou acessar uma página que não existe, retorne clicando
+      no botão de voltar abaixo
+    </p>
+    <button class="back-button" (click)="goBack()">Voltar</button>
+  </div>
+</div>
