--- a/src/app/pages/profile/profile.component.sass
+++ b/src/app/pages/profile/profile.component.sass
@@ -1,6 +1,6 @@
 
 .profile
-  background: #FCFCFC
+  background-color: #FCFCFC
   padding-top: 80px
   color: #4A5568
 
@@ -114,7 +114,7 @@
 
   .profile-contact-button
     padding: 10px 24px
-    background: #8C19D2
+    background-color: #8C19D2
     border-radius: 6px
     color: white
     text-decoration: none
